added contact page

--- a/css/theme.css
+++ b/css/theme.css
@@ -12456,4 +12456,8 @@ ul li {
 #news h5 {
   margin-bottom: 1.5em;
 }
+
+#contact h6 {
+  margin-bottom: 2em;
+}
 /*# sourceMappingURL=theme.css.map */
