--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -37,6 +37,7 @@ h3 {
   margin-top: 1em;
 }
 
+
 .list-group.custom-active {
   a.active {
     background-color: unset;
@@ -76,5 +77,11 @@ ul li {
   }
   h5 {
     margin-bottom: 1.5em;
+  }
+}
+
+#contact {
+  h6 {
+    margin-bottom: 2em; 
   }
 }
