updated hero images

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -183,7 +183,7 @@ ul li {
 }
 
 .hero-1 {
-  background-image: url(../images/OSE_banner_blue.png);
+  background-image: url(../images/ose_sky_4-20_manhattan_1@3x.png);
   background-size: cover;
   background-position: 50% 100%;
   &:before {
@@ -192,7 +192,7 @@ ul li {
 }
 
 .hero-2 {
-  background-image: url(../images/OSE_banner_red.png);
+  background-image: url(../images/ose_sky_4-20_brooklyn_1@3x.png);
   background-position: 50% 100%;
   background-size: cover;
   &:before {
@@ -201,7 +201,7 @@ ul li {
 }
 
 .hero-3 {
-  background-image: url(../images/OSE_banner_yellow.png);
+  background-image: url(../images/ose_sky_4-20_queens_1@3x.png);
   background-position: 50% 100%;
   background-size: cover;
   &:before {
