--- a/css/theme.css
+++ b/css/theme.css
@@ -12573,9 +12573,9 @@ ul li {
 }
 
 .hero-1 {
-  background-image: url(../images/OSE_banner_blue.png);
+  background-image: url(../images/ose_sky_4-20_manhattan_2@3x.png);
   background-size: cover;
-  background-position: 50% 100%;
+  background-position: 50% 50%;
 }
 
 .hero-1:before {
@@ -12583,8 +12583,8 @@ ul li {
 }
 
 .hero-2 {
-  background-image: url(../images/OSE_banner_red.png);
-  background-position: 50% 100%;
+  background-image: url(../images/ose_sky_4-20_brooklyn_1@3x.png);
+  background-position: 50% 50%;
   background-size: cover;
 }
 
@@ -12593,8 +12593,8 @@ ul li {
 }
 
 .hero-3 {
-  background-image: url(../images/OSE_banner_yellow.png);
-  background-position: 50% 100%;
+  background-image: url(../images/ose_sky_4-20_queens_1@3x.png);
+  background-position: 50% 50%;
   background-size: cover;
 }
 
@@ -12735,7 +12735,7 @@ ul li {
 }
 
 #quiz #results .details ul li.unknown:before {
-  content: '?';
+  content: '!';
 }
 
 #quiz #results .details ul li.unknown .if-unknown {
