--- a/scss/_a-global-variables.scss
+++ b/scss/_a-global-variables.scss
@@ -71,7 +71,7 @@ $accessible-colors: true;
   $purple: #8762cd;
   $pink: #e8006d;
   $red: #ea172b;
-  $orange: #c45500;
+  $orange: #cf4c00;
   $green: #21883f;
   $teal: #0c8763;
   $cyan: #008299;
