--- a/scss/_a-global-variables.scss
+++ b/scss/_a-global-variables.scss
@@ -70,7 +70,8 @@ $accessible-colors: true;
   $indigo: #8f51f4;
   $purple: #8762cd;
   $pink: #e8006d;
-  $red: #ea172b;
+  // $red: #ea172b;
+  $red: #dd363a;
   $orange: #cf4c00;
   $green: #21883f;
   $teal: #0c8763;
@@ -84,7 +85,7 @@ $accessible-colors: true;
 // Set your theme's color palette here
 
 $primary: black;
-$secondary: #EF3F38;
+$secondary: #dd363a;
 $info: #a513b6;
 $dark: #0a1438;
 $cream: hsl(32, 45%, 95%);
