leadership card color

--- a/css/theme.css
+++ b/css/theme.css
@@ -12479,7 +12479,7 @@ ul li {
 }
 
 .leadership-card {
-  background-color: #fbf9f6;
+  background-color: #f8f3ed;
   margin-top: 2rem;
   padding: 1.5rem;
 }
