--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -95,7 +95,7 @@ ul li {
 }
 
 .leadership-card {
-  background-color: lighten($cream, 2.5%);
+  background-color: $cream;
   margin-top: 2rem;
   padding: 1.5rem;
   > div {
